# tree-sitter

./: Cargo.toml  Makefile  flake.nix
.github/workflows/: build.yml  ci.yml  release.yml  wasm_exports.yml
cli/: Cargo.toml
cli/benches/: benchmark.rs
cli/generate/src/: lib.rs  nfa.rs  node_types.rs  parse_grammar.rs  render.rs  rules.rs
cli/generate/src/build_tables/: build_lex_table.rs  build_parse_table.rs  item.rs  item_set_builder.rs  minimize_parse_table.rs  mod.rs  token_conflicts.rs
cli/generate/src/prepare_grammar/: expand_tokens.rs  extract_tokens.rs  flatten_grammar.rs  intern_symbols.rs  mod.rs  process_inlines.rs
cli/loader/src/: lib.rs
cli/src/: highlight.rs  init.rs  main.rs  parse.rs  playground.rs  query.rs  query_testing.rs  test.rs  test_highlight.rs  test_tags.rs  util.rs  version.rs  wasm.rs
cli/src/fuzz/: allocations.rs  mod.rs  random.rs
cli/src/templates/: lib.rs
cli/src/tests/: async_context_test.rs  corpus_test.rs  highlight_test.rs  language_test.rs  mod.rs  node_test.rs  parser_test.rs  query_test.rs  tags_test.rs  wasm_language_test.rs
cli/src/tests/helpers/: allocations.rs  edits.rs  query_helpers.rs
cli/src/tests/proc_macro/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/benches/: benchmark.rs
crates/cli/eslint/: package.json
crates/cli/npm/: cli.js  install.js  package.json
crates/cli/src/: fuzz.rs  highlight.rs  init.rs  input.rs  main.rs  parse.rs  test.rs  version.rs  wasm.rs
crates/cli/src/fuzz/: allocations.rs  random.rs
crates/cli/src/templates/: binding_test.js  gitignore  package.json
crates/cli/src/tests/: highlight_test.rs  parser_test.rs  query_test.rs
crates/cli/src/tests/helpers/: query_helpers.rs
crates/cli/src/tests/proc_macro/: Cargo.toml
crates/generate/: Cargo.toml
crates/generate/src/: generate.rs  nfa.rs  node_types.rs  parse_grammar.rs  quickjs.rs  render.rs  rules.rs
crates/generate/src/prepare_grammar/: flatten_grammar.rs  intern_symbols.rs  process_inlines.rs
crates/highlight/src/: c_lib.rs  highlight.rs
crates/language/: Cargo.toml
crates/loader/src/: loader.rs
crates/tags/src/: c_lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: build_wasm.rs  bump.rs  embed_sources.rs  fetch.rs  generate.rs  main.rs  test.rs
docs/src/: 6-contributing.md
docs/src/cli/: generate.md  version.md
docs/src/creating-parsers/: 1-getting-started.md
highlight/src/: c_lib.rs  lib.rs
lib/: Cargo.toml
lib/binding_rust/: bindings.rs  ffi.rs  lib.rs  wasm_language.rs
lib/binding_web/: CONTRIBUTING.md  eslint.config.mjs  package-lock.json  package.json  package.nix  tsconfig.json
lib/binding_web/script/: build.js  check-artifacts-fresh.ts
lib/binding_web/src/: finalization_registry.ts  marshal.ts
lib/binding_web/test/: edit.test.ts  language.test.ts  memory.test.ts  memory.ts  memory_unsupported.test.ts  node.test.ts  parser.test.ts  query.test.ts  tree.test.ts
lib/language/: Cargo.toml
lib/src/: wasm_store.c
tags/src/: c_lib.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: benchmark.rs  build_wasm.rs  bump.rs  check_wasm_exports.rs  fetch.rs  generate.rs  main.rs  test.rs  upgrade_emscripten.rs  upgrade_wasmtime.rs
