[package]
name = "tree-sitter-tests-proc-macro"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
rand = "0.9.2"
syn = { version = "2.0.114", features = ["full"] }
